# kraft

./: .gitignore  .htaccess  canvas.html  code.js  compile.sh  main.html  main.js  mytest.js  open.sh  style.css  todo
code/: Compiler.coffee  RenderContext.coffee  Renderer.coffee  canvas.js  compile.sh  drag.coffee  drag.js  events.coffee  events.js  io.js  main.js  model.coffee  model.js  prelude.coffee  prelude.js  renderer.coffee  selection.coffee  selection.js  setup.js
code/adjustable/: Line.coffee  Rect.coffee
code/app/: Canvas.coffee  Container.coffee  Drag.coffee  Dragger.coffee  Events.coffee  Model.coffee  Prelude.coffee  RenderContext.coffee  Renderer.coffee  Selection.coffee  (+2 more)
compiler/: Compiler.coffee  compile.sh
html/: canvas.html  menu.html
loader/: loader.coffee
s/: main.css  shapes.css  toolbar.css
server/domain/: LICENSE  README  domain.cabal
server/domain/src/: Index.hs  Test.hs  XmlStorage.hs
server/domain/src/Canvas/: Model.hs  User.hs
server/domain/src/Control/Arrow/: List.hs
server/domain/src/Text/XML/Light/: Convert.hs  Trans.hs
server/webstore/: webstore.cabal
server/webstore/src/: WebStore.hs
site/: main.html  signin.html
src/: arch.js  base.js  canvas.js  constraint.js  drag.js  events.js  handle.js  io.js  line.js  meta.js  model.js  point.js  rect.js  render.js  renderableEllipse.js  renderableLine.js  selection.js  setup.js  shape.js
style/: all.less  canvas.css  canvas.less  graph.less  guides.less  main.css  main.less  menu.less  scrollbar.css  scrollbar.less  shapes.css  shapes.less  toolbar.css  toolbar.less
(+141 files in other folders)
